feat: get preferences + organize tests for new endpoint
